tools: dependency update, fix tab bug, fix unlogged errors, add missing cache file check